--- a/usanalysis.ipynb
+++ b/usanalysis.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# checking whether the file exists or not and is indeed a file \n",
     "#showing the first 5 rows of the dataset\n",
-    "file_path=r\"C:\\Users\\shiva\\Youtube-AnalysisProject1\\Data\\USvideos.csv\" #pathway to clarity \n",
+    "file_path=r\"D:\\Jupyter Notebook\\Youtube_Analysis\\data\\USvideos.csv"#pathway to clarity \n",
     "if not os.path.exists(file_path):\n",
     "    raise FileNotFoundError(f\"The file'{file_path}' was not there.\")\n",
     "print(os.getcwd())"
@@ -1451,8 +1451,8 @@
    ],
    "source": [
     "#save the cleaned dataset to anew csv file\n",
-    "df.to_csv(r\"C:\\Users\\shiva\\Youtube-AnalysisProject1\\data\\cleaned_USvideos.csv\",index=False)\n",
-    "print(\"cleaned data saved to C:\\\\Users\\\\shiva\\\\Youtube-AnalysisProject1\\\\data\\\\cleaned_USvideos.csv\")"
+    "df.to_csv(r\"D:\\Jupyter Notebook\\Youtube_Analysis\\data\\cleaned_USvideos.csv",index=False)\n",
+    "print(\"cleaned data saved to D:\\\\Jupyter Notebook\\\\Youtube_Analysis\\\\data\\\\cleaned_USvideos.csv\")"
    ]
   },
   {
