--- a/usanalysis.ipynb
+++ b/usanalysis.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# checking whether the file exists or not and is indeed a file \n",
     "#showing the first 5 rows of the dataset\n",
-    "file_path=r\"D:\\Jupyter Notebook\\Youtube_Analysis\\data\\USvideos.csv"#pathway to clarity \n",
+    "file_path=r\"D:\\Jupyter Notebook\\Youtube_Analysis\\data\\USvideos.csv\" #pathway to clarity \n",
     "if not os.path.exists(file_path):\n",
     "    raise FileNotFoundError(f\"The file'{file_path}' was not there.\")\n",
     "print(os.getcwd())"
