--- a/usanalysis.ipynb
+++ b/usanalysis.ipynb
@@ -1451,7 +1451,7 @@
    ],
    "source": [
     "#save the cleaned dataset to anew csv file\n",
-    "df.to_csv(r\"D:\\Jupyter Notebook\\Youtube_Analysis\\data\\cleaned_USvideos.csv",index=False)\n",
+    "df.to_csv(r\"D:\\Jupyter Notebook\\Youtube_Analysis\\data\\cleaned_USvideos.csv\",index=False)\n",
     "print(\"cleaned data saved to D:\\\\Jupyter Notebook\\\\Youtube_Analysis\\\\data\\\\cleaned_USvideos.csv\")"
    ]
   },
