--- a/usanalysis.ipynb
+++ b/usanalysis.ipynb
@@ -1191,7 +1191,7 @@
    "source": [
     "#counting how manyy videos appears in each category\n",
     "plt.figure(figsize=(8,4))\n",
-    "sns.countplot(y=\"category_id\",data=df,order=df[\"category_id\"].value_counts().index)\n",
+    "sns.countplot(y=\"category_id\",data=df,order=df[\"category_id\"].value_counts().index,palette =\"viridis\")\n",
     "plt.title(\"Distribution of Trending videos by category id\")\n",
     "plt.xlabel(\"Number of Videos\")\n",
     "plt.ylabel(\"category ID\")\n",
@@ -1219,7 +1219,7 @@
     "#finding which channels had the most trending videos\n",
     "top_channels =df[\"channel_title\"].value_counts().head(10)\n",
     "plt.figure(figsize=(8,4))\n",
-    "sns.barplot(x=top_channels.values,y=top_channels.index)\n",
+    "sns.barplot(x=top_channels.values,y=top_channels.index,palette=\"plasma\")\n",
     "plt.title(\"Top 10 Trending youtube channels\")\n",
     "plt.xlabel(\"number of Trnding videos\")\n",
     "plt.ylabel(\"channel title\")\n",
@@ -1316,7 +1316,7 @@
     "bottom_10_views=df.sort_values(by=\"views\",ascending=True).head(10)\n",
     "bottom_10_views[\"group\"]=\"Bottom 10\"\n",
     "plt.figure(figsize=(10,4))\n",
-    "sns.barplot(x=\"views\",y=\"likes\",data=bottom_10_views)\n",
+    "sns.barplot(x=\"views\",y=\"likes\",data=bottom_10_views,palette=\"inferna\")\n",
     "plt.title(\"Views and Likes of the Bottom 10 Trending Videos\")\n",
     "plt.xlabel(\"views\")\n",
     "plt.ylabel(\"Likes\")\n",
@@ -1346,7 +1346,7 @@
     "#using a bar chart for the most commented videos\n",
     "top_commented = df.sort_values(by='comment_count',ascending=False).drop_duplicates(subset='title').head(10)\n",
     "plt.figure(figsize=(10,4))\n",
-    "sns.barplot(x='comment_count',y='title',data=top_commented)\n",
+    "sns.barplot(x='comment_count',y='title',data=top_commented,palette=\"magma\")\n",
     "plt.title(\"Top 10 most commented videos\",fontsize=12)\n",
     "plt.xlabel(\"Total comments\")\n",
     "plt.ylabel(\"video title\")\n",
